A Turkish dish page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-    
+        <h2> <img src="./images/chef1.jpg"
+            width="350"
+            height="400">
+            <p>Here are some Turkish Dish Recipes <b>Bon Appetit!</b></p>
+        </h2>
+        <h3><p><a href="./pages/meatballs.html">Turkish Meatballs</a></p>
+            <p><a href="./pages/redrice.html">Turkish Red rice</p>
+         </h3>
     </body>
 </html>
